compiler/tests/should-fail/UnexpectedProtocolArgument.via
/* UnexpectedArgumentError */

host alice : {A}

fun main() {
    val x: int@Local(host = alice, unexpected = true) = 0;
}
